refactor(model): 统一 DTO/VO 为 Request/Response 命名
- User: UserDto→UserRequest, UserVO→UserResponse, UserPublicVO→UserPublicResponse
- Course: CourseDto→CourseRequest, CourseVO→CourseResponse, PageVO→PageResponse
- Category: CategoryDto→CategoryRequest, CategoryVO→CategoryResponse
- Chapter: ChapterDto→ChapterRequest, ChapterVO→ChapterResponse
- Content: ContentBlockVO→ContentBlockResponse
- Learning: UserLearningRecordDto/UserChapterProgressDto→Request, VO→Response
- Graph: KnowledgeGraphVO/GraphNodeVO/GraphEdgeVO→Response
- Quiz: 创建 QuizResponse/QuizOptionResponse/UserQuizAnswerResponse（不再直接返回 Entity）
- Search: UserProfileVO→UserProfileResponse，包名前缀统一为 server.search
- Convertor: toVO→toResponse, toVOList→toResponseList
- 所有模型移至 pojo/request/ 和 pojo/response/

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>